--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -11,6 +11,7 @@ on:
     paths-ignore:
       - '*.md'
     branches: [ master ]
+    # trigger build
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
