--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -47,8 +47,8 @@ jobs:
           sudo rm -f /swapfile
 
 #      Uncomment if you need additional space (takes about 2 minutes)
-      - name: Reclaiming disk space on / by removing .NET framework
-        run: sudo rm -rf /usr/share/dotnet
+#       - name: Reclaiming disk space on / by removing .NET framework
+#         run: sudo rm -rf /usr/share/dotnet
         
       - name: Checking available disk-space
         run: df -h
@@ -158,8 +158,8 @@ jobs:
       - name: Creating symlink in $HOME/cache pointing to cache on /dev/disk/azure/resource-part1
         run: ln -s /cache $HOME/
 
-      - name: Downloading binary objects cache to $HOME/cache
-        run: rclone copy --fast-list --transfers=16 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
+#       - name: Downloading binary objects cache to $HOME/cache
+#         run: rclone copy --fast-list --transfers=16 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
 
       - name: Checking available disk-space after downloading cache
         run: df -h
