--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           sudo mkdir -p /secondary_disk
           sudo chown -R runner:docker /secondary_disk 
+      - name: sortlink 
         run: ln -s /secondary_disk $GITHUB_WORKSPACE/
 
       # We cannot checkout outside of $GITHUB_WORKSPACE, but we want to checkout to the SSD
@@ -71,7 +72,9 @@ jobs:
 
       - name: Updating APT repository
         run: sudo apt-get update
+      - name: install python and java
         run: sudo apt-get install -y python openjdk-8-jdk-headless libncurses5 ccache
+      - name: in case not java8
         run: sudo update-java-alternatives --set java-1.8.0-openjdk-amd64
 
       - name: Installing system dependencies
@@ -137,6 +140,8 @@ jobs:
         run: |
           sudo mkdir -p /mnt/cache
           sudo chown -R runner:docker /mnt/cache
+          
+      - name: sortlink
         run: ln -s /mnt/cache $HOME/
 
       - name: Downloading binary objects cache to $HOME/cache
